# hedgehog

./: .gitignore  CMakeLists.txt  Demo.md  Readme.md  comm.cpp  comm.h  demo.cpp  main.cc
cmake-modules/: FindOpenBLAS.cmake
doxygen/: hedgehog.cfg  new_stylesheet.css
hedgehog/: hedgehog.h
hedgehog/core/io/base/receiver/: core_receiver.h
hedgehog/core/io/graph/receiver/: core_graph_receiver.h
hedgehog/core/io/queue/receiver/: core_queue_multi_receivers.h  core_queue_receiver.h
hedgehog/core/io/queue/sender/: core_queue_sender.h
hedgehog/core/node/: core_graph.h  core_node.h  core_task.h
hedgehog/core/node/execution_pipeline/: core_execution_pipeline.h
hedgehog/hedgehog/: hedgehog.h
hedgehog/hedgehog/api/: abstract_cuda_task.h  abstract_execution_pipeline.h  abstract_task.h  graph.h
hedgehog/hedgehog/api/memory_manager/: memory_data.h  memory_manager.h  static_memory_manager.h
hedgehog/hedgehog/api/printer/: abstract_printer.h  dot_printer.h
hedgehog/hedgehog/api/printer/options/: color_scheme.h  debug_options.h  structure_options.h
hedgehog/hedgehog/api/scheduler/: abstract_scheduler.h  default_scheduler.h
hedgehog/hedgehog/api/state_manager/: abstract_state.h  state_manager.h
hedgehog/hedgehog/api/tools/: graph_signal_handler.h
hedgehog/hedgehog/behavior/: execute.h  node.h  switch_rule.h
hedgehog/hedgehog/behavior/io/: multi_receivers.h  sender.h
hedgehog/hedgehog/behavior/memory_manager/: pool.h
hedgehog/hedgehog/core/behavior/: core_execute.h
hedgehog/hedgehog/core/defaults/: core_default_execution_pipeline.h  core_default_task.h
hedgehog/hedgehog/core/io/base/receiver/: core_multi_receivers.h  core_receiver.h  core_slot.h
hedgehog/hedgehog/core/io/base/sender/: core_notifier.h  core_sender.h
hedgehog/hedgehog/core/io/graph/receiver/: core_graph_multi_receivers.h  core_graph_receiver.h  core_graph_sink.h
hedgehog/hedgehog/core/io/graph/sender/: core_graph_source.h
hedgehog/hedgehog/core/io/queue/receiver/: core_queue_multi_receivers.h  core_queue_receiver.h  core_queue_slot.h
hedgehog/hedgehog/core/io/queue/sender/: core_queue_notifier.h  core_queue_sender.h
hedgehog/hedgehog/core/node/: core_graph.h  core_node.h  core_task.h
hedgehog/hedgehog/core/node/execution_pipeline/: core_execution_pipeline.h  core_switch.h
hedgehog/hedgehog/tools/: cuda_debugging.h  logger.h  nvtx_profiler.h
hedgehog/hedgehog_cx/: hedgehog_cx.h
hedgehog/hedgehog_cx/api_cx/: cx_abstract_test.h  cx_graph.h  cx_node.h  defroster.h  property_map.h
hedgehog/hedgehog_cx/behavior_cx/: abstract_node.h
hedgehog/hedgehog_cx/compile_time_tests/: cycle_test.h  data_race_test.h
hedgehog/hedgehog_cx/tools/algorithm/: algorithm.h  back_insert_iterator.h  mod_seq.h  nonmod_seq.h
hedgehog/hedgehog_cx/tools/data_structures/: pair_cx.h  stack_cx.h  vector_cx.h
hedgehog/hedgehog_cx/tools/visitors/: input_visitor.h  output_visitor.h  receiver_visitor.h  sender_visitor.h
hedgehog/src/api/graph/: graph.h
hedgehog/src/api/memory_manager/manager/: memory_manager.h  static_memory_manager.h
hedgehog/src/api/printer/: dot_printer.h  hedgehog_export_file.h
hedgehog/src/api/printer/color/: blue_to_red_color.h  jet_color.h
hedgehog/src/api/printer/options/: color_picker.h
hedgehog/src/behavior/input_output/: state_multi_senders.h  task_multi_senders.h
hedgehog/src/core/abstractions/base/: copyable_abstraction.h  groupable_abstraction.h
hedgehog/src/core/abstractions/base/input_output/: notifier_abstraction.h  sender_abstraction.h
hedgehog/src/core/abstractions/node/: execution_pipeline_inputs_management_abstraction.h  graph_inputs_management_abstraction.h  graph_outputs_management_abstraction.h  task_inputs_management_abstraction.h  task_outputs_management_abstraction.h
hedgehog/src/core/implementors/concrete_implementor/: default_multi_executes.h  default_sender.h
hedgehog/src/core/implementors/concrete_implementor/graph/: graph_receiver.h
hedgehog/src/core/implementors/concrete_implementor/receiver/: limited_atomic_queue_receiver.h
hedgehog/src/core/implementors/concrete_implementor/slot/: atomic_slot.h
hedgehog/src/core/implementors/concrete_implementor/task/: internal_lambda_task.h
hedgehog/src/core/nodes/: core_execution_pipeline.h  core_graph.h  core_state_manager.h
hedgehog/src/core/parts/: core_switch.h  graph_sink.h
hedgehog/src/tools/: concepts.h  meta_functions.h
hedgehog/utils/: concept.h  helper.h  traits.h
tests/: CMakeLists.txt  testAll.cc
tests/compile_time_analysis/: test_basic.h  test_critical_path.h  test_cycle_improved.h  test_error_message.h  test_matrix_multiplication.h  test_race_condition.h
tests/data_structures/compile_time_analysis/graphs/: graph_const_int_const_int.h  graph_int_int.h  inside_graph.h
tests/data_structures/compile_time_analysis/static_tests/: test_critical_path.h
tests/data_structures/compile_time_analysis/tasks/: task_const_int_const_int.h  task_int_int.h  task_int_int_with_can_terminate.h
tests/data_structures/matrix_multiplication/data/: matrix_block_data.h
tests/data_structures/matrix_multiplication/state/: input_block_state.h  output_state.h  partial_computation_state.h  partial_computation_state_manager.h
tests/data_structures/matrix_multiplication/task/: addition_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h  product_task.h
tests/data_structures/states/: state_int_float_to_int.h
tests/graphs/big_example/ep/: inner_ep.h
tests/graphs/cycle/: test_cycle.h
tests/graphs/cycle/tasks/: my_task_2.h
tests/graphs/ep_composition/: test_ep_composition.h
tests/tests/: test_complex_graph.h  test_link.cpp  test_link2.cpp
